test/parse_errors/esm.js
export default {};

something weird();

function someFunction() {

}
